--- a/index.html
+++ b/index.html
@@ -11,7 +11,166 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    />
+
+    <link rel="stylesheet" href="style.css" />
+
     <title>Frontend Mentor | Fylo landing page with two column layout</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <nav>
+          <img src="./images/logo.svg" alt="logo" />
+          <ul>
+            <li>
+              <a href="#">features</a>
+            </li>
+            <li>
+              <a href="#">Sign in</a>
+            </li>
+            <li>
+              <a href="#">Team</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="flex">
+          <div>
+            <h1>All your files in one secure location, accessible anywhere.</h1>
+            <p>
+              Fylo stores your most important files in one secure location.
+              Access them wherever you need, share and collaborate with friends,
+              family, and co-workers.
+            </p>
+            <form>
+              <input type="email" placeholder="Enter your email..." />
+              <button>get started</button>
+            </form>
+          </div>
+          <div>
+            <img
+              class="illustration"
+              src="./images/illustration-1.svg"
+              alt="header-img"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="light-blueish">
+      <div class="container">
+        <div class="flex">
+          <div>
+            <h2>stay productive, wherever you are</h2>
+            <p>
+              never let location be an issue when accessing your files. fylo has
+              you covered for all of your file storage needs.
+            </p>
+            <p>
+              Securely share files and folders with friends, family and
+              collegues for live collaboration. No email attachments required!
+            </p>
+            <a href="#" class="green"
+              >See how fylo works
+              <img src="./images/icon-arrow.svg" alt="icon-arrow" />
+            </a>
+            <div class="testimonial-box">
+              <img src="./images/icon-quotes.svg" alt="icon-quotes" />
+              <p>
+                Fylo has improved our team productivity by an order of
+                magnitude. Since making the switch our team has become a
+                well-oiled collaboration machine.
+              </p>
+              <div class="user-info">
+                <div>
+                  <img src="./images/avatar-testimonial.jpg" alt="user" />
+                </div>
+                <div>
+                  <h4>Kyle Burton</h4>
+                  <small>Founder & CEO, Huddle</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img
+              class="illustration"
+              src="./images/illustration-2.svg"
+              alt="section-img"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="blueish">
+      <div class="container">
+        <div class="flex">
+          <div>
+            <h2>Get early access today</h2>
+            <p>
+              It only takes a minute to sign up and our free starter tier is
+              extremely generous. if you have any question, our support team
+              would be happy to help you.
+            </p>
+          </div>
+          <div>
+            <form>
+              <input type="email" placeholder="example@ex.com" />
+              <button>Get started for free</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <img src="./images/logo white.svg" alt="logo" />
+
+        <div class="flex align-start">
+          <ul>
+            <li>+91-200-200-2022</li>
+            <li>example@gmail.com</li>
+          </ul>
+
+          <ul>
+            <li>About Us</li>
+            <li>Jobs</li>
+            <li>Press</li>
+            <li>Blog</li>
+          </ul>
+
+          <ul>
+            <li>Career</li>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </ul>
+
+          <ul class="social-media">
+            <li>
+              <a class="circle" href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a class="circle" href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a class="circle" href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
